...
		
		static let openSystemSettings = "AppStrings.NotificationSettings.openSystemSettings"
		static let close = "AppStrings.NotificationSettings.DeltaOnboarding.primaryButtonTitle"
	}
	
	enum Home {
		static let leftBarButtonDescription = "AppStrings.Home.leftBarButtonDescription"
		static let rightBarButtonDescription = "AppStrings.Home.rightBarButtonDescription"
		static let activateCardOnTitle = "AppStrings.Home.activateCardOnTitle"
		static let activateCardOffTitle = "AppStrings.Home.activateCardOffTitle"
		static let activateCardBluetoothOffTitle = "AppStrings.Home.activateCardBluetoothOffTitle"
		static let riskCardIntervalUpdateTitle = "AppStrings.Home.riskCardIntervalUpdateTitle"
		static let tableView = "AppStrings.Home.tableView"

		enum AppClosureNoticeCell {
			static let container = "AppStrings.Home.AppClosureNoticeCell.container"
			
			enum Details {
				static let image = "AppStrings.Home.AppClosureNoticeCell.Details.image"
				static let titleLabel = "AppStrings.Home.AppClosureNoticeCell.Details.titleLabel"
				static let subtitleLabel = "AppStrings.Home.AppClosureNoticeCell.Details.subtitleLabel"
				static let longTextLabel = "AppStrings.Home.AppClosureNoticeCell.Details.longTextLabel"
				static let faqLabel = "AppStrings.Home.AppClosureNoticeCell.Details.faqLabel"
			}
		}

		enum RiskTableViewCell {
...

			static let titleLabel = "AccessibilityIdentifiers.Home.titleLabel"
			static let subtitleLabel = "AccessibilityIdentifiers.Home.subtitleLabel"
			static let negativeDiagnosisCaptionLabel = "AccessibilityIdentifiers.Home.negativeDiagnosisCaptionLabel"
			static let negativeDiagnosisVirusLabel = "AccessibilityIdentifiers.Home.negativeDiagnosisVirusLabel"
			static let negativeDiagnosisLabel = "AccessibilityIdentifiers.Home.negativeDiagnosisLabel"
			static let descriptionLabel = "AccessibilityIdentifiers.Home.descriptionLabel"
			static let footnoteLabel = "AccessibilityIdentifiers.Home.footnoteLabel"
		}

		enum ShownPositiveTestResultCell {
			enum PCR {
				static let pcrCell = "AccessibilityIdentifiers.Home.pcrCell"
...
			static let submittedAntigenCell = "AccessibilityIdentifiers.Home.submittedAntigenCell"
			static let removeTestButton = "AppStrings.Home.TestResult.ShownPositive.removeTestButton"
			static let deleteAlertDeleteButton = "AppStrings.Home.TestResult.ShownPositive.deleteAlertDeleteButton"
		}

		enum MoreInfoCell {
			static let moreCell = "AppStrings.Home.moreCell"

			static let settingsLabel = "AppStrings.Home.settingsActionView"
			static let recycleBinLabel = "AppStrings.Home.recycleBinActionView"
			static let appInformationLabel = "AppStrings.Home.appInformationActionView"
			static let faqLabel = "AppStrings.Home.faqActionView"
			static let socialMediaLabel = "AppStrings.Home.socialMediaActionView"
			static let shareLabel = "AppStrings.Home.shareActionView"
		}
		
		enum EndOfLifeThankYouCell {
...

		enum Antigen {
			static let proofDesc = "AppStrings.ExposureSubmissionResult.Antigen.proofDesc"
		}

		enum RemoveAlert {
			static let deleteButton = "AppStrings.ExposureSubmissionResult.removeAlert_ConfirmButtonTitle"
		}
	}
	
	enum ExposureSubmissionPositiveTestResult {
		static let noConsentTitle = "TestResultPositive_NoConsent_Title"
		static let noConsentInfo1 = "TestResultPositive_NoConsent_Info1"
...
		static let optionNo = "AppStrings.ExposureSubmissionWarnEuropeTravelConfirmation.optionNo"
		static let optionNone = "AppStrings.ExposureSubmissionWarnEuropeTravelConfirmation.optionNone"
	}

	enum LocalStatistics {
		static let title = "AppStrings.Statistics.Card.Incidence.title"
		static let infoButton = "AppStrings.Statistics.Card.Incidence.infoButton"
		static let selectState = "AppStrings.LocalStatistics.selectState"
		static let selectDistrict = "AppStrings.LocalStatistics.selectDistrict"
		static let manageStatisticsCard = "AppStrings.LocalStatistics.manageStatisticsCard"
		static let localStatisticsCard = "AppStrings.LocalStatistics.localStatisticsCard"
		static let localStatisticsCardTitle = "AppStrings.LocalStatistics.localStatisticsCardTitle"
		static let localStatisticsCardSubtitle = "AppStrings.LocalStatistics.localStatisticsCardSubtitle"
		static let localStatisticsCardPrimaryValue = "AppStrings.LocalStatistics.localStatisticsCardPrimaryValue"
		static let localStatisticsCardSecondaryValue = "AppStrings.LocalStatistics.localStatisticsCardSecondaryValue"
...
	enum LinkCard {
		enum PandemicRadar {
			static let titleLabel = "AppStrings.LinkCard.PandemicRadar.titleLabel"
			static let subtitleLabel = "AppStrings.LinkCard.PandemicRadar.subtitleLabel"
			static let descriptionLabel = "AppStrings.LinkCard.PandemicRadar.descriptionLabel"
			static let image = "AppStrings.LinkCard.PandemicRadar.image"
			static let button = "AppStrings.LinkCard.PandemicRadar.button"
			static let infoButton = "AppStrings.LinkCard.PandemicRadar.infoButton"
			static let deleteButton = "AppStrings.LinkCard.PandemicRadar.deleteButton"
			static let card = "AppStrings.LinkCard.PandemicRadar"
		}
	}

...
			static let cancel = "AppStrings.Reset.confirmDialogCancel"
		}

	}
	
	enum AccessibilityLabel {
		static let close = "AppStrings.AccessibilityLabel.close"
	}
	
	enum InviteFriends {
		static let imageAccessLabel = "AppStrings.InviteFriends.imageAccessLabel"
	}
	
...
			static let subtitle = "AppStrings.Statistics.Card.Combined7DayIncidence.subtitle"
			static let primaryValueTitle = "AppStrings.Statistics.Card.Combined7DayIncidence.primaryValueTitle"
			static let secondaryValueTitle = "AppStrings.Statistics.Card.Combined7DayIncidence.secondaryValueTitle"
			static let infoButton = "AppStrings.Statistics.Card.Combined7DayIncidence.infoButton"
		}
		enum General {
			static let tableViewCell = "HomeStatisticsTableViewCell"
			static let card = "HomeStatisticsCard"
		}
	}
	
	enum UpdateOSScreen {
		static let mainImage = "UpdateOSScreen.mainImage"
...
